ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/accessibility-features.less
html.adobeguides-text-size
  .custom-container
  .gu-custom-container
  .col-9grid
  .col-9grid-container {
  margin-top: 3.538rem;
}

html.adobeguides-text-size{
  @media (max-width: 480px) {
  body.hi-tech .custom-container .gu-custom-container .col-9grid .col-9grid-container {
    margin-top: 5.85rem !important;
  }
}
}

html.adobeguides-text-size .version-selector .dropdown__list {
  width: 4rem;
}

html#adobeguides-dark-contrast {
  .toolbar-hitech .desktop {
    z-index: var(--z-index-10);
  }
}

html.adobeguides-text-spacing {
  @media (max-width: 1023px) {
    .social-share-container .social-links {
      width: max-content;
    }
  }
}

